--- a/src/components/atoms/LoadingSpinner/index.css
+++ b/src/components/atoms/LoadingSpinner/index.css
@@ -18,19 +18,12 @@
 }
 
 @keyframes spin {
-	0% {
-		transform: rotate(0);
-	}
-	100% {
-		transform: rotate(360deg);
-	}
+	0% { transform: rotate(0); }
+
+	100% { transform: rotate(360deg); }
 }
 
 @keyframes loading-circle {
-	0% {
-		stroke-dashoffset: 0
-	}
-	100% {
-		stroke-dashoffset: -600;
-	}
+	0% { stroke-dashoffset: 0; }
+	100% { stroke-dashoffset: -600; }
 }
