--- a/src/components/molecules/Select/index.css
+++ b/src/components/molecules/Select/index.css
@@ -20,13 +20,14 @@
 			width: 0;
 			height: 100%;
 			opacity: 0;
-			background: #F5F5F5;
+			background: ##f5f5f5;
 			z-index: -1;
 			transition: width 0.3s ease-in-out;
 		}
 
 		&.animation {
-			&:hover, &.active {
+			&:hover,
+			&.active {
 				& > .mask {
 					opacity: 1;
 					width: 100%;
@@ -44,7 +45,7 @@
 }
 
 .default-select-box {
-	border: solid 0.5px #B4B4B4;
+	border: solid 0.5px #b4b4b4;
 	border-radius: 5px;
 	background: white;
 
